changes for collapsing floating menu when video board fragment not visible, and changes to remove blank screen on last fragment when pressing back button